implements theming and options across the board

--- a/Package/options/options.html
+++ b/Package/options/options.html
@@ -7,11 +7,12 @@
 		div.option:nth-child(even) {background-color:#EDEDED;}
 		div.heading {background-color:#333333;color:#EEEEEE;font-size:20px;padding:5px 10px 5px 10px;}
 		button#save {margin:5px;}
+		.disabled {display:none;}
 	</style>
 </head>
 <body>
 <div class="heading">Theme</div>
-<div class="option">
+<div class="option disabled">
 	<label>
 		<input type="checkbox" id="EnableTheme"> Enable Theme?
 	</label>
