Ability to disable theme, add colorful theme, theme upload boxes #37 #36 #35

--- a/Package/options/options.html
+++ b/Package/options/options.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="heading">Theme</div>
-<div class="option disabled">
+<div class="option">
 	<label>
 		<input type="checkbox" id="EnableTheme"> Enable Theme?
 	</label>
@@ -25,7 +25,7 @@ Accent Color:
 		<option value="#27b6f4">Blue</option>
 		<option value="#86f214">Lime</option>
 		<option value="#f7830f">Orange</option>
-		<option value="#f4114d">Purple</option>
+		<option value="#f4114d">Red</option>
 	</select>
 </div>
 
@@ -34,6 +34,7 @@ Theme:
 	<select id="Theme">
 		<option value="dark">Dark</option>
 		<option value="light">Light</option>
+		<option value="colorful">Colourful</option>
 	</select>
 </div>
 
