--- a/Package/options/options.html
+++ b/Package/options/options.html
@@ -17,15 +17,19 @@
 		<input type="checkbox" id="EnableTheme"> Enable Theme?
 	</label>
 </div>
-<div class="option">
+<div class="option" id="AccentDiv">
 Accent Color:
 	<select id="AccentColor">
-		<option value="#c70ff4">Purple</option>
+		<option value="#9c27b0">Purple</option>
 		<option value="#ff51b1">Pink</option>
-		<option value="#27b6f4">Blue</option>
-		<option value="#86f214">Lime</option>
-		<option value="#f7830f">Orange</option>
+		<option value="#2196f3">Blue</option>
+		<option value="#03a9f4">Light Blue</option>
+		<option value="#86f214">Bright Green</option>
+		<option value="#A6E22E">Lime</option>
+		<option value="#ffc107">Amber</option>
+		<option value="#ff9800">Orange</option>
 		<option value="#f4114d">Red</option>
+		<option value="#9e9e9e">Grey</option>
 	</select>
 </div>
 
