--- a/Package/options/options.html
+++ b/Package/options/options.html
@@ -25,12 +25,15 @@ Accent Color:
 		<option value="#2196f3">Blue</option>
 		<option value="#03a9f4">Light Blue</option>
 		<option value="#86f214">Bright Green</option>
+		<option value="#008752">WesGreen</option>
 		<option value="#A6E22E">Lime</option>
 		<option value="#ffc107">Amber</option>
 		<option value="#ff9800">Orange</option>
 		<option value="#f4114d">Red</option>
 		<option value="#9e9e9e">Grey</option>
+		<option calue="custom">Custom</option>
 	</select>
+	<input type="text" name="AccentColorCustom" id="AccentColorCustom">
 </div>
 
 <div class="option">	
