--- a/Package/options/options.html
+++ b/Package/options/options.html
@@ -31,6 +31,13 @@ Accent Color:
 		<option value="#ff9800">Orange</option>
 		<option value="#f4114d">Red</option>
 		<option value="#9e9e9e">Grey</option>
+		<option value="#7ac143">WCPL Bright Green</option>
+		<option value="#ffcf01">WCPL Yellow</option>
+		<option value="#e87d1e">WCPL Orange</option>
+		<option value="#79bde9">WCPL Light Blue</option>
+		<option value="#003767">WCPL Dark Blue</option>
+		<option value="#b557c9">WCPL Unofficial Purple</option>
+
 	</select>
 	<input type="text" name="AccentColor" id="AccentColor">
 </div>
